<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PublishActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/add_post_btn"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@null"
                android:ems="10"
                android:fontFamily="@font/merriweather_bold_italic"
                android:hint="@string/publish_title_hint"
                android:inputType="textMultiLine"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/bodyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@null"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/publish_body_text_hint"
                android:inputType="textMultiLine"
                android:textColor="#000000" />

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar_publish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:elevation="8dp"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:visibility="gone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_post_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:height="60dp"
        android:backgroundTint="@color/buttonColor"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/publish_btn_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="#FFFFFF" />

</RelativeLayout>